# Hagoromo

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Hagoromo.pro  LICENSE  README.md
app/: CMakeLists.txt  Hagoromo_ja.ts  app.icns  app.pro  app.qrc  app.rc  deps.pri  main.cpp
app/atprotocol/: accessatprotocol.cpp  accessatprotocol.h  appbskyfeedgetposts.h  appbskyfeedgettimeline.cpp  appbskyfeedgettimeline.h  appbskynotificationlistnotifications.cpp  appbskynotificationlistnotifications.h  comatprotorepocreaterecord.cpp  comatprotorepocreaterecord.h  comatprotoservercreatesession.cpp  comatprotoservercreatesession.h  comatprotoserverrefreshsession.cpp  comatprotoserverrefreshsession.h  lexicons.h  lexicons_func.cpp  lexicons_func.h  lexicons_func_unknown.cpp  lexicons_func_unknown.h
app/i18n/: app_ja.qm  app_ja.ts  qt_ja_JP.qm  qt_ja_JP.ts
app/qml/: IconButton.qml  ListNotificationView.qml  LoginDialog.qml  NotificationListView.qml  PostDialog.qml  TimelineView.qml  layout_test_main.qml  main.qml
app/qml/compat/: ColorOverlayC.qml  GlowC.qml  OpacityMaskC.qml  SettingsC.qml
app/qml/controls/: CalendarPicker.qml  ClickableFrame.qml  ComboBoxEx.qml  DragAndDropArea.qml  EmojiPicker.qml  IconButton.qml  IconLabelFrame.qml  ImageWithIndicator.qml  MenuEx.qml  MenuItemEx.qml  MessageBubble.qml  MoreButton.qml  ProgressCircle.qml  RadioButtonEx.qml
app/qml/data/: Account.qml  AdjustedValues.qml  ColumnSettings.qml
app/qml/dialogs/: AccountDialog.qml  AddColumnDialog.qml  AddListDialog.qml  AddMutedWordDialog.qml  AddPollDialog.qml  AddToListDialog.qml  AltEditDialog.qml  BlockListDialog.qml  BlockedAccountsDialog.qml  BlockedListsDialog.qml  ColumnSettingDialog.qml  ContentFilterSettingDialog.qml  DiscoverFeedsDialog.qml  DraftConfirmationDialog.qml  LoginDialog.qml  (+21 more)
app/qtquick/: CMakeLists.txt  accountlistmodel.cpp  accountlistmodel.h  actorfeedgeneratorlistmodel.cpp  actorfeedgeneratorlistmodel.h  actorlikelistmodel.cpp  actorlikelistmodel.h  anyfeedlistmodel.cpp  anyfeedlistmodel.h  anyprofilelistmodel.cpp  anyprofilelistmodel.h  atpabstractlistmodel.cpp  atpabstractlistmodel.h  authorfeedlistmodel.cpp  authorfeedlistmodel.h  blockslistmodel.cpp  blockslistmodel.h  columnlistmodel.cpp  columnlistmodel.h  common.h  contentfiltersettinglistmodel.cpp  contentfiltersettinglistmodel.h  createrecord.cpp  createrecord.h  createsession.cpp  createsession.h  customfeedlistmodel.cpp  customfeedlistmodel.h  embedimagelistmodel.cpp  embedimagelistmodel.h  externallink.cpp  externallink.h  feedgeneratorlink.cpp  feedgeneratorlink.h  feedgeneratorlistmodel.cpp  feedgeneratorlistmodel.h  feedtypelistmodel.cpp  feedtypelistmodel.h  followerslistmodel.cpp  followerslistmodel.h  (+45 more)
app/tools/: globalsettings.cpp  globalsettings.h  translatorchanger.cpp  translatorchanger.h
lib/: CMakeLists.txt  HagoromoLib_ja.ts  common.h  lib.pri  lib.pro  lib.qrc
lib/atprotocol/: accessatprotocol.cpp  accessatprotocol.h  appbskyfeedgetposts.cpp  appbskyfeedgetpostthread.h  appbskynotificationlistnotifications.cpp  appbskynotificationlistnotifications.h  comatprotorepocreaterecord.cpp  comatprotoservercreatesession.h  lexicons.h  lexicons_func.cpp  lexicons_func.h  lexicons_func_unknown.cpp  lexicons_func_unknown.h
lib/http/: httpaccess.cpp  httpaccess.h  httpaccessmanager.cpp  httpaccessmanager.h  httpreply.cpp  httpreply.h  simplehttpserver.cpp  simplehttpserver.h
lib/i18n/: lib_ja.qm  lib_ja.ts
lib/log/: logaccess.cpp  logaccess.h  logmanager.cpp  logmanager.h
lib/realtime/: abstractpostselector.cpp  abstractpostselector.h  andpostselector.cpp  andpostselector.h  firehosereceiver.cpp  firehosereceiver.h  followerpostselector.cpp  followerpostselector.h  followerspostselector.cpp  followerspostselector.h  followingpostselector.cpp  followingpostselector.h  listpostsselector.cpp  listpostsselector.h  mepostselector.cpp  mepostselector.h  notpostselector.cpp  notpostselector.h  orpostselector.cpp  orpostselector.h  xorpostselector.cpp  xorpostselector.h
lib/search/: search.h  search_func.cpp  search_func.h  searchposts.cpp  searchposts.h  searchprofiles.cpp  searchprofiles.h
lib/tools/: accountmanager.cpp  accountmanager.h  authorization.cpp  authorization.h  base32.cpp  base32.h  cardecoder.cpp  cardecoder.h  chatlogsubscriber.cpp  chatlogsubscriber.h  configurablelabels.cpp  configurablelabels.h  deviceinfo.cpp  deviceinfo.h  encryption.cpp  encryption.h  encryption_seed_template.h  es256.cpp  es256.h  imagecompressor.cpp  imagecompressor.h  jsonwebtoken.cpp  jsonwebtoken.h  labelerprovider.cpp  labelerprovider.h  labelprovider.cpp  labelprovider.h  leb128.cpp  leb128.h  listitemscache.cpp  listitemscache.h  opengraphprotocol.cpp  opengraphprotocol.h  pinnedpostcache.cpp  pinnedpostcache.h  qstringex.h  tid.cpp  tid.h
tests/: CMakeLists.txt  deps.pri  tests.cmake  tests.pro
tests/atprotocol_test/: CMakeLists.txt  atprotocol_test.pro  atprotocol_test.qrc  tst_atprotocol_test.cpp
tests/chat_test/: CMakeLists.txt  chat_test.pro  chat_test.qrc  tst_chat_test.cpp
tests/common/: CMakeLists.txt  common.pri  unittest_common.cpp  unittest_common.h  webserver.cpp  webserver.h
tests/hagoromo_test/: CMakeLists.txt  hagoromo_test.pro  hagoromo_test.qrc  tst_hagoromo_test.cpp
tests/hagoromo_test2/: CMakeLists.txt  hagoromo_test2.pro  hagoromo_test2.qrc  tst_hagoromo_test2.cpp
tests/http_test/: CMakeLists.txt  http_test.pro  http_test.qrc  tst_http_test.cpp
tests/log_test/: CMakeLists.txt  log_test.pro  log_test.qrc  tst_log_test.cpp
tests/oauth_test/: CMakeLists.txt  oauth_test.pro  oauth_test.qrc  tst_oauth_test.cpp
tests/realtime_test/: CMakeLists.txt  realtime_test.pro  realtime_test.qrc  tst_realtime_test.cpp
tests/search_test/: CMakeLists.txt  search_test.pro  search_test.qrc  tst_search_test.cpp
tests/tools_test/: CMakeLists.txt  tools_test.pro  tools_test.qrc  tst_tools_test.cpp
tests/video_test/: CMakeLists.txt  tst_video_test.cpp  video_test.qrc
tools/firehosereader/: CMakeLists.txt  firehosereader.pro  main.cpp
(+897 files in other folders)
