enable_testing()

add_subdirectory(common)
add_subdirectory(atprotocol_test)
add_subdirectory(chat_test)
add_subdirectory(hagoromo_test)
add_subdirectory(hagoromo_test2)
add_subdirectory(http_test)
add_subdirectory(log_test)
add_subdirectory(oauth_test)
add_subdirectory(realtime_test)
add_subdirectory(search_test)
add_subdirectory(tools_test)
add_subdirectory(video_test)
